Fixed popover z-index.

--- a/src/styl/popover/popover.styl
+++ b/src/styl/popover/popover.styl
@@ -23,13 +23,14 @@ $popover-arrow-cover-position = ($popover-diagonal-cover / 2) - ($popover-arrow-
 .popover-trigger {
     position: relative;
     display: inline-block;
+    z-index: 2;
 }
 
 .popover {
     display: block;
     position: absolute;
     min-width: 30vw;
-    z-index: 10;
+    z-index: 1;
     opacity: 0;
     visibility: hidden;
     text-transform: none;
@@ -202,7 +203,6 @@ $popover-arrow-cover-position = ($popover-diagonal-cover / 2) - ($popover-arrow-
         border: $popover-border-width solid $popover-border-color;
         border-radius: $popover-border-radius;
         box-shadow: $popover-box-shadow-x $popover-box-shadow-y $popover-box-shadow-additional;
-        z-index: 10;
     }
     *:hover:not(.popover-closed) > &:not(.popover-closed),
     *.popover-open > &:not(.popover-closed),
